# AFSBO

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
afsbo/: utils.py
afsbo/clean_data/: clean_data.py
afsbo/clear_data/: clear_data.py
afsbo/scripts/: load_data_from_s3.py  push_data_to_s3.py
afsbo/tools/: load_data_from_s3.py  push_data_to_s3.py  s3_client.py
afsbo/train/: cross_validation_train.py  train.py
dags/: clean_data.py  clear_data.py  train_model.py
notebooks/: eda.ipynb
src/clear_data/: clear_data.py
