[tool.poetry]
name = "afsbo"
version = "0.1.0"
description = ""
authors = ["VasilevGrigoriy <vasiliev-greg@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.pyspark.dependencies]
pyspark = "^3.5.0"
findspark = "^2.0.1"


[tool.poetry.group.research.dependencies]
matplotlib = "^3.0"
seaborn = "^0.13.0"
pandas = "^1.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"


[tool.poetry.group.logs.dependencies]
tqdm = "^4.66.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
